# Amoskys

./: .dockerignore  .env.example  .env.template  .flake8  .gitignore  .pre-commit-config.yaml  ACTIVATION_GUIDE.md  AGENT_CONTROL_QUICK_START.md  AGENT_CONTROL_SESSION_COMPLETE.md  AGENT_CONTROL_USER_GUIDE.md  AGENT_HARMONY_ARCHITECTURE.md  AMOSKYS_UI_GUIDE.md  ANALYSIS_SUMMARY_FOR_STAKEHOLDERS.md  AUDIT_QUICK_REFERENCE.md  AUDIT_SUMMARY.txt  CHANGELOG.md  CLEANUP_AND_AUDIT_PLAN.md  CLEANUP_EXECUTION_PLAN.md  CODEBASE_STATUS.md  CODE_QUALITY_AUDIT.md  COMPLETION_REPORT.md  COMPREHENSIVE_ARCHITECTURE_AUDIT_2025.md  COMPREHENSIVE_AUDIT.md  DASHBOARD_ACCESS.md  DASHBOARD_QUICK_START.md  DASHBOARD_STATUS_COMPLETE.md  DASHBOARD_VERIFICATION_REPORT.md  DATA_FLOW_ANALYSIS.md  DETECTION_PACK_V1_VALIDATION_REPORT.md  DOCUMENTATION_IMPROVEMENTS.md  DOCUMENTATION_INDEX.md  E2E_STATUS_AND_NEXT_STEPS.md  ENVIRONMENT_STABLE.md  ENV_SETUP.md  EXECUTIVE_BRIEFING.md  EXECUTIVE_SUMMARY.md  FAANG_CODE_ORGANIZATION_PLAN.md  FINAL_VERIFICATION.md  FIRST_DATA_COLLECTION_MILESTONE.md  FIRST_STEPS_GUIDE.md  (+78 more)
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  ci.yml  deploy.yml  k8s-deploy.yml  k8s-validate.yml
InfraSpectre/: .gitignore  LICENSE  requirements.txt
InfraSpectre/proto/: messaging_schema.proto
InfraSpectre/scripts/: gen_certs.sh
agents/flowagent/: main.py
archive/: mypy.ini.archived
archive/2025-12-27-cleanup/: AGENT_CONTROL_FINAL_STATUS_REPORT.md  AGENT_CONTROL_FIX_DEVICE_SCANNER.md  AGENT_CONTROL_INTEGRATION_VERIFIED.md  AGENT_CONTROL_UX_ENHANCEMENT_COMPLETE.md  AGENT_FIXES_APPLIED.md  ANALYSIS_DOCUMENTATION_INDEX.md  ANALYST_QUICK_START.md  ARCHITECTURE_OVERVIEW.md  COMPLETE_ANALYSIS_SUMMARY.md  COMPLETE_EXECUTION_SUMMARY.md  COMPLETE_STATUS_REPORT_OCT26_2025.md  CONSISTENCY_FIXES_ROUND2.md  IMPLEMENTATION_PROGRESS_TRACKER.md  IMPORT_FIXES_COMPLETE.md  ISSUES_AND_GAPS_ASSESSMENT.md  ISSUES_AND_GAPS_COMPREHENSIVE.md  ISSUES_AND_SOLUTIONS_SUMMARY.md  MASTER_DEVELOPMENT_GUIDE.md  MASTER_NAVIGATION_INDEX.md  ML_PIPELINE_SESSION_COMPLETE.md  ML_PIPELINE_WHAT_WAS_BUILT.md  OPERATIONS_QUICK_GUIDE.md  PHASE_1_5_COMPLETE.md  PHASE_1_CLEANUP_QUICK_START.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_READINESS_ASSESSMENT.md  QUICKSTART.md  QUICK_START_TODAY.md  REALISTIC_NEXT_STEPS.md  RESUME_FINAL_VERSION.md  RESUME_VERIFICATION_REPORT.md  SESSION_CHANGES_DECEMBER_4_EVENING.md  SESSION_SUMMARY_DECEMBER_5_2025.md  SESSION_SUMMARY_OCT25.md  SESSION_SUMMARY_OCT26_ML_PIPELINE.md  SNMP_AGENT_SUCCESS.md  SOLO_DEVELOPER_ROADMAP.md  STABILITY_REPORT_DECEMBER_2025.md  START_HERE.md  STATUS_REPORT_SUMMARY.md  (+6 more)
backup_before_cleanup/: messaging_schema_pb2.py.bak  server.py.bak  wal_sqlite.py.bak
certs/: agent.crt  agent.csr  agent.ed25519  agent.ed25519.pub  agent.key  ca.crt  ca.key  ca.srl  server.crt  server.csr  server.ext  server.key
config/: amoskys.yaml  infraspectre.yaml  microprocessor_agent.yaml  production.env.example  snmp_agent.yaml  snmp_metrics_config.yaml
configs/: trinity.local.env
deploy/: Dockerfile.agent  Dockerfile.eventbus  Dockerfile.web  README.md  com.amoskys.esf-sensor.plist  deploy_mcp.sh  docker-compose.dev.yml  seccomp-python-net.json
deployments/: AGENT_TEMPLATE.md  DEPLOYMENT_LESSONS.md
docs/: AGENTS.md  AGENT_OVERVIEW.md  AMOSKYS_ARCHITECTURE_VISUAL.md  ARCHITECTURE.md  ASSESSMENT.md  BACKPRESSURE_RUNBOOK.md  BENCHMARK_ROADMAP.md  CI_CD_PIPELINE_GUIDE.md  CLEANUP_PLAN.md  COMPONENT_DETAIL.md  CONTRIBUTING.md  DEPLOYMENT_IMPROVEMENTS.md  DETECTION_BENCHMARK.md  DNS_DEPLOYMENT_CHECKLIST.md  DNS_DEPLOYMENT_GUIDE.md  DOCKER_USAGE.md  ENVIRONMENT.md  FUTURE_PLAN.md  MIGRATION_PLAN.md  MITRE_COVERAGE.md  OPS_RUNBOOK.md  PHASE0_REVIEW.md  PHASE1_CLEANUP_SUMMARY.md  PHASE1_COMPLETION.md  PHASE1_COMPLETION_REPORT.md  PHASE1_FINAL_COMPLETION.md  PHASE1_FINAL_VALIDATION.md  PHASE1_STABILITY_PROGRESS.md  PHASE2_PROGRESS.md  PHASE_2_3_COMPLETION.md  PHASE_2_4_COMPLETION.md  PHASE_2_4_FINAL_COMPLETION.md  PHASE_2_4_REPOSITORY_FINALIZATION.md  PHASE_2_PLAN.md  PRE_DEPLOYMENT_CHECKLIST.md  PRODUCTION_DEPLOYMENT.md  PROJECT_STATUS_REPORT.md  README.md  REPOSITORY_HYGIENE_AUDIT_2025.md  REPRODUCIBILITY.md  (+9 more)
etc/: com.amoskys.agent.plist  com.amoskys.watchdog.plist
igris_upgrade/: INSTALL.py
kali/: amoskys-red  igris-shell  pentagi_monitor.sh
macos-esf-shim/: AmoskysAgent.entitlements  BUILD.md  main.swift
notebooks/: ml_transformation_pipeline.ipynb  run_ml_pipeline.py  train_anomaly_models.py
proto/: Makefile  control.proto  messaging_schema.proto  patch_imports.py  universal_telemetry.proto
requirements/: environment.yaml  requirements-api.txt  requirements-clean.txt  requirements-full-frozen.txt  requirements-production.txt  requirements.txt
scripts/: README.md  activate_check.sh  activate_multiagent.py  amoskys-daemon.sh  amoskys_esf_sensor.sh  amoskys_verify.py  analyze_telemetry_pipeline.py  attack_simulation.py  attack_visualizer.py  audit_wal_chain.py  benchmark.py  check-deployment-status.sh  check_e2e_status.sh  check_env.sh  collect_and_store.py  configure_metrics.py  demo_fusion_engine.py  deploy.sh  deploy_inads_phase3.py  deploy_microprocessor_agent.sh  deploy_remote.sh  deploy_threat_intel.sh  deploy_web.sh  dev_device_discovery.py  dev_fullstack.sh  dev_kernel_audit.py  dev_protocol_collectors.py  diagnose-data-collection.sh  diagnose_auth_logs.sh  drain_queue.py  evasion_gauntlet.py  export_golden_fixtures.py  fleet_cache_indexes.sql  fleet_retention.py  gen_ed25519.sh  generate_agent_keys.py  init_auth_db.py  init_database.py  install_amoskys.sh  lab_check.sh  (+49 more)
sensor/: Cargo.toml  README.md
sensor/src/: event.rs  main.rs  trust.rs
server/: command_center.py
systemd/: amoskys-agents.service  amoskys-eventbus.service  amoskys-web.service
tests/: test_code_quality.py  test_microprocessor_agent.py  test_proto_imports.py
tools/: amoskys_doctor.py  api_integration_demo.py  chaos.sh  eval_harness.py  generate_mac_telemetry.py  inspect_wal_events.py  loadgen.py  visualize_timeline.py
web/: gunicorn_config.py  requirements.txt  wsgi.py
(+1697 files in other folders)
