[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "amoskys"
version = "1.0.0"
description = "Neural Security Orchestration That Evolves - Real-time security intelligence platform"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Amoskys Contributors", email = "info@amoskys.dev"}
]
keywords = ["security", "monitoring", "neural", "orchestration", "telemetry"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Topic :: Security"
]

dependencies = [
    # Core protocol & messaging
    "grpcio>=1.66.0",
    "grpcio-tools>=1.66.0",
    "protobuf>=5.28.0",

    # Configuration & serialization
    "pyyaml>=6.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.1.0",

    # Security & cryptography
    "cryptography>=44.0.0",
    "pycryptodome>=3.21.0",

    # Monitoring & observability
    "prometheus-client>=0.21.0",
    "psutil>=6.1.0"
]

[project.optional-dependencies]
# Web dashboard dependencies
web = [
    "flask>=3.1.0",
    "flask-socketio>=5.3.0",
    "werkzeug>=3.1.0",
    "gunicorn>=21.2.0",
    "eventlet>=0.36.0",
    "websocket-client>=1.8.0",
    "pyjwt>=2.10.0",
    "bcrypt>=4.3.0"
]

# Agent-specific dependencies
agents = [
    "psutil>=6.1.0",
    "requests>=2.32.0",
    "aiohttp>=3.11.0"
]

# Development tools
dev = [
    # Testing
    "pytest>=8.4.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",

    # Code quality
    "black>=24.10.0",
    "isort>=5.13.0",
    "ruff>=0.8.0",

    # Type checking
    "mypy>=1.13.0",

    # CLI tools
    "click>=8.1.0",
    "rich>=13.9.0"
]

# Documentation generation
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0"
]

# Machine learning / intelligence features
ml = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0"
]

# Complete installation (all optional dependencies)
all = [
    "amoskys[web,agents,dev,docs,ml]"
]

[project.scripts]
# Agent console entrypoints
amoskys-flowagent = "amoskys.agents.flowagent.main:main"
amoskys-procagent = "amoskys.agents.proc.proc_agent:main"
amoskys-authguard = "amoskys.agents.auth.auth_agent:main"
amoskys-persistguard = "amoskys.agents.persistence.persistence_agent:main"

# EventBus & Intelligence
amoskys-eventbus = "amoskys.eventbus.server:main"
amoskys-fusion = "amoskys.intel.fusion_engine:main"

# Dashboard
amoskys-dashboard = "web.app:main"

[project.urls]
Homepage = "https://github.com/Vardhan-225/Amoskys"
Documentation = "https://github.com/Vardhan-225/Amoskys/tree/main/docs"
Repository = "https://github.com/Vardhan-225/Amoskys.git"
Issues = "https://github.com/Vardhan-225/Amoskys/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["amoskys*"]

# Development Configuration
[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | proto
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["infraspectre"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "proto"
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = [
    "proto/",
    "tests/",
    ".venv/"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["src"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short"
]
markers = [
    "unit: Unit tests",
    "component: Component integration tests",
    "integration: Full integration tests",
    "golden: Golden reference tests"
]

[tool.coverage.run]
source = ["src/amoskys"]
omit = [
    "*/proto/*",
    "*/tests/*",
    "*/__pycache__/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]
