[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "amoskys"
version = "0.9.0-beta.1"
description = "Neural Security Orchestration That Evolves - Real-time security intelligence platform"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Amoskys Contributors", email = "info@amoskys.dev"}
]
keywords = ["security", "monitoring", "neural", "orchestration", "telemetry"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Topic :: Security"
]

dependencies = [
    # Core protocol & messaging
    "grpcio>=1.66.0",
    "grpcio-tools>=1.66.0",
    "protobuf>=5.28.0",

    # Configuration & serialization
    "pyyaml>=6.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.1.0",

    # Security & cryptography
    "cryptography>=44.0.0",
    "pycryptodome>=3.21.0",

    # Monitoring & observability
    "prometheus-client>=0.21.0",
    "psutil>=6.1.0"
]

[project.optional-dependencies]
# Web dashboard dependencies
web = [
    "flask>=3.1.0",
    "flask-socketio>=5.3.0",
    "werkzeug>=3.1.0",
    "gunicorn>=21.2.0",
    "eventlet>=0.36.0",
    "websocket-client>=1.8.0",
    "pyjwt>=2.10.0",
    # Phase 3: Authentication infrastructure
    "sqlalchemy>=2.0.0",
    "argon2-cffi>=23.1.0",
    "jinja2>=3.1.0",
    # Phase 3: Security enhancements
    "flask-limiter>=3.5.0",
    "flask-wtf>=1.2.0",
    "flask-talisman>=1.1.0"
]

# Agent-specific dependencies
agents = [
    "psutil>=6.1.0",
    "requests>=2.32.0",
    "aiohttp>=3.11.0"
]

# Development tools
dev = [
    # Testing
    "pytest>=8.4.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",

    # Code quality - PIN EXACT VERSIONS for CI/local consistency
    "black==24.10.0",
    "isort==5.13.2",
    "flake8==7.1.1",
    "ruff>=0.8.0",

    # Type checking
    "mypy>=1.13.0",

    # CLI tools
    "click>=8.1.0",
    "rich>=13.9.0",

    # Pre-commit hooks
    "pre-commit>=3.6.0"
]

# Documentation generation
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0"
]

# Machine learning / intelligence features
ml = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0"
]

# Intelligence / PCAP analysis
intelligence = [
    "scapy>=2.5.0",
    "dpkt>=1.9.8",
]

# Edge deployment (resource-constrained)
edge = [
    "lz4>=4.3.3",
]

# Complete installation (all optional dependencies)
all = [
    "amoskys[web,agents,dev,docs,ml,intelligence,edge]"
]

[project.scripts]
# ─── Agent console entrypoints ───
amoskys-proc = "amoskys.agents.proc.proc_agent:main"
amoskys-auth = "amoskys.agents.auth.auth_guard_agent:main"
amoskys-persist = "amoskys.agents.persistence.persistence_agent:main"
amoskys-dns = "amoskys.agents.dns.dns_agent:main"
amoskys-fim = "amoskys.agents.fim.fim_agent:main"
amoskys-flow = "amoskys.agents.flow.flow_agent:main"
amoskys-peripheral = "amoskys.agents.peripheral.peripheral_agent:main"

# Legacy flow agent (WAL integration — retained for pipeline compatibility)
amoskys-flowagent = "amoskys.agents.flowagent.main:main"

# ─── EventBus & Intelligence ───
amoskys-eventbus = "amoskys.eventbus.server:serve"
amoskys-fusion = "amoskys.intel.fusion_engine:main"
amoskys-ingest = "amoskys.intel.ingest:main"

# ─── Dashboard ───
amoskys-dashboard = "web.app:main"

[project.urls]
Homepage = "https://github.com/Vardhan-225/Amoskys"
Documentation = "https://github.com/Vardhan-225/Amoskys/tree/main/docs"
Repository = "https://github.com/Vardhan-225/Amoskys.git"
Issues = "https://github.com/Vardhan-225/Amoskys/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["amoskys*"]

# Development Configuration
[tool.black]
line-length = 88
target-version = ['py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | proto
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["amoskys"]
skip_glob = ["**/proto/*", "*_pb2.py", "*_pb2_grpc.py"]
extend_skip = [".venv", "venv", "build", "dist"]
src_paths = ["src", "tests", "web"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "proto"
]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
warn_return_any = false
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = false
disallow_untyped_defs = false
check_untyped_defs = false
ignore_missing_imports = true
show_error_codes = true
strict_optional = false
no_implicit_optional = false
# Disable noisy error categories that are not actual bugs
disable_error_code = ["var-annotated", "type-arg", "arg-type", "index", "operator", "attr-defined", "call-overload", "return-value", "assignment", "type-var", "union-attr", "import-untyped"]
exclude = [
    "/proto/",
    "proto/",
    "_pb2\\.py$",
    "_pb2_grpc\\.py$",
    "tests/",
    "\\.venv/",
    "build/",
    "dist/"
]

# Type stubs configuration - ignore external libraries
[[tool.mypy.overrides]]
module = [
    "grpc.*",
    "google.protobuf.*",
    "yaml.*",
    "psutil.*",
    "prometheus_client.*",
    "eventlet.*",
    "flask_socketio.*",
    "flask.*",
    "scapy.*",
    "pandas.*",
    "numpy.*",
    "sklearn.*",
    "cryptography.*",
    "Crypto.*",
    "bcrypt.*",
    "jwt.*",
    "werkzeug.*",
    "gunicorn.*",
    "aiohttp.*",
    "dotenv.*",
    "lz4.*",
    "pysnmp.*",
    "dpkt.*",
    "pydantic.*",
    "xattr.*"
]
ignore_missing_imports = true

# Proto files - auto-generated
[[tool.mypy.overrides]]
module = ["amoskys.proto.*"]
ignore_errors = true

# Modules with pre-existing type issues - to be fixed in Phase 3
[[tool.mypy.overrides]]
module = [
    "amoskys.intelligence.pcap.ingestion",
    "amoskys.intelligence.fusion.threat_correlator",
    "amoskys.intelligence.features.network_features",
    "amoskys.intel.rules",
    "amoskys.intel.advanced_rules",
    "amoskys.agents.common.threat_detection",
    "amoskys.agents.peripheral.peripheral_agent",
    "amoskys.agents.persistence.persistence_agent",
    "amoskys.agents.kernel_audit.kernel_audit_agent",
    "amoskys.agents.fim.fim_agent",
    "amoskys.agents.dns.dns_agent",
    "amoskys.intelligence.score_junction",
    "amoskys.edge.edge_optimizer",
    "amoskys.agents.snmp.enhanced_collector",
    "amoskys.agents.protocols.universal_collector",
    "amoskys.agents.discovery.device_scanner"
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["src"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short"
]
markers = [
    "unit: Unit tests",
    "component: Component integration tests",
    "integration: Full integration tests",
    "golden: Golden reference tests",
    "smoke: Smoke tests for deployment verification (quick, critical path)",
]

[tool.coverage.run]
source = ["src/amoskys"]
omit = [
    "*/proto/*",
    "*/tests/*",
    "*/__pycache__/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]
